new MRL architecture (explained in theory part &  new simulated validation scenarios)

--- a/RL_vehicles_references.bib
+++ b/RL_vehicles_references.bib
@@ -247,3 +247,42 @@ title = {Continuous control with deep reinforcement learning},
 journal = {CoRR}
 }
 
+@inproceedings{MRL,
+author = {Bhat, Sooraj and Jr, Charles and Mateas, Michael},
+year = {2006},
+month = {01},
+pages = {},
+title = {On the Difficulty of Modular Reinforcement Learning for Real-World Partial Programming.},
+volume = {1},
+journal = {Proceedings of the National Conference on Artificial Intelligence}
+}
+
+@misc{MRLexample1,
+      title={Modular Deep Reinforcement Learning for Continuous Motion Planning with Temporal Logic}, 
+      author={Mingyu Cai and Mohammadhosein Hasanbeig and Shaoping Xiao and Alessandro Abate and Zhen Kan},
+      year={2021},
+      eprint={2102.12855},
+      archivePrefix={arXiv},
+      primaryClass={cs.LG}
+}
+
+@INPROCEEDINGS{MRLexample2,
+  author={Wang, Zhe and Tian, Zhongyuan and Xu, Jiang and Maeda, Rafael K. V. and Li, Haoran and Yang, Peng and Wang, Zhehui and Duong, Luan H. K. and Wang, Zhifei and Chen, Xuanqi},
+  booktitle={2017 22nd Asia and South Pacific Design Automation Conference (ASP-DAC)}, 
+  title={Modular reinforcement learning for self-adaptive energy efficiency optimization in multicore system}, 
+  year={2017},
+  volume={},
+  number={},
+  pages={684-689},
+  doi={10.1109/ASPDAC.2017.7858403}
+}
+
+
+
+@article{MRLexample3,
+author = {Andreas, Jacob and Klein, Dan and Levine, Sergey},
+year = {2016},
+month = {11},
+pages = {},
+title = {Modular Multitask Reinforcement Learning with Policy Sketches}
+}
